Remove mention of processing time and bandwidth.
SHA: fb2ed4434ff5f36774a228ba50aa59b90dc7a15f
Reason: push, by jyasskin

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1592,8 +1592,7 @@ User agents should provide a way to disable <a data-link-type="dfn|abstract-op" 
 
 </div>
 
-<p>Some people may want to save processing time or bandwidth that's not necessary
-to achieve their immediate goals, or they might know something about their
+<p>Some people might know something about their
 specific situation that makes the API designers' general decisions inappropriate
 for them. Because the information provided by <a data-link-type="dfn|abstract-op" href="#dfn-ancillary-apis-that-provide-new-information" class="internalDFN" id="ref-for-dfn-ancillary-apis-that-provide-new-information-4">ancillary APIs that provide new information</a> isn't
 available in any other way, <a data-link-type="dfn|abstract-op" data-type="dfn" href="https://infra.spec.whatwg.org/#user-agent">user agents</a> should let people turn them off,
