Avoid implying that ancillary APIs w/ new information should default to enabled.
SHA: 118f79e4fb560172845f3ed098cdc78d05fbd8c3
Reason: push, by jyasskin

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1587,7 +1587,8 @@ breaks on their particular computer, and be able to get follow-up communication
 from the developers while they fix the bug. This is an appropriate time to ask
 the person's permission.</p>
 <div class="practice principle" data-audiences="user-agents"><a class="marker self-link" href="#principle-disabling-ancillary-apis-with-new-information"><bdi lang="en">Principle</bdi></a>: <span class="practicelab" id="principle-disabling-ancillary-apis-with-new-information">
-User agents should provide a way to disable <a data-link-type="dfn|abstract-op" href="#dfn-ancillary-apis-that-provide-new-information" class="internalDFN" id="ref-for-dfn-ancillary-apis-that-provide-new-information-3">ancillary APIs that provide new information</a>.
+User agents should provide a way to enable or disable <a data-link-type="dfn|abstract-op" href="#dfn-ancillary-apis-that-provide-new-information" class="internalDFN" id="ref-for-dfn-ancillary-apis-that-provide-new-information-3">ancillary APIs that provide new information</a> and should set the default according to their users'
+needs.
 </span>
 
 </div>
@@ -2531,7 +2532,8 @@ for <a data-link-type="dfn|abstract-op" href="#dfn-ancillary-apis-computed-from-
 <a data-link-type="dfn|abstract-op" href="#dfn-ancillary-apis-that-provide-new-information" class="internalDFN" id="ref-for-dfn-ancillary-apis-that-provide-new-information-6">Ancillary APIs that provide new information</a> should not reveal any <a data-link-type="dfn|abstract-op" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-59">personal data</a> that isn't already available through other APIs, without an indication
 that doing so aligns with the user's wishes and interests.
 </span></li><li><a class="marker self-link" href="#principle-disabling-ancillary-apis-with-new-information"><bdi lang="en">Principle</bdi></a>: <span class="practicelab">
-User agents should provide a way to disable <a data-link-type="dfn|abstract-op" href="#dfn-ancillary-apis-that-provide-new-information" class="internalDFN" id="ref-for-dfn-ancillary-apis-that-provide-new-information-7">ancillary APIs that provide new information</a>.
+User agents should provide a way to enable or disable <a data-link-type="dfn|abstract-op" href="#dfn-ancillary-apis-that-provide-new-information" class="internalDFN" id="ref-for-dfn-ancillary-apis-that-provide-new-information-7">ancillary APIs that provide new information</a> and should set the default according to their users'
+needs.
 </span></li><li><a class="marker self-link" href="#bp-new-web-apis-must-guard-users-information-at-least-as-well-as-existing-apis-that-are-expected-to-stay-in-the-web-platform"><bdi lang="en">Principle</bdi></a>: <span class="practicelab">New Web APIs must guard users' information at least
   as well as existing APIs that are expected to stay in the web platform.</span></li><li><a class="marker self-link" href="#principle-sensitive"><bdi lang="en">Principle</bdi></a>: <span class="practicelab">
     System designers
