Status: TAG consensus

--- a/index.html
+++ b/index.html
@@ -504,9 +504,9 @@ It was prepared by the [Web Privacy Principles Task Force](https://github.com/w3
 which was convened by the TAG. Publication as a Draft Finding or Draft Note does not imply
 endorsement by the TAG or by the W3C Membership.
 
-This draft <strong>does not yet</strong> reflect the consensus of the TAG or the task force and may
-be updated, replaced, or obsoleted by other documents at any time. It is inappropriate to cite this
-document as anything other than a work in progress.
+The substance of this draft reflects the consensus of the TAG, but it is subject to ongoing
+editorial work and restructuring. Please bear this in mind when citing or linking
+to this document, as section numbers and headings may change.
 
 It will continue to evolve and the task force will issue updates as often as needed. At the
 conclusion of the task force, the TAG intends to adopt this document as a Finding.
