--- a/index.html
+++ b/index.html
@@ -849,9 +849,9 @@ which we are releasing as a Draft Note. The intent is for this document to becom
 It was prepared by the <a href="https://github.com/w3ctag/privacy-principles">Web Privacy Principles Task Force</a>,
 which was convened by the TAG. Publication as a Draft Finding or Draft Note does not imply
 endorsement by the TAG or by the <abbr title="World Wide Web Consortium">W3C</abbr> Membership.</p>
-<p>This draft <strong>does not yet</strong> reflect the consensus of the TAG or the task force and may
-be updated, replaced, or obsoleted by other documents at any time. It is inappropriate to cite this
-document as anything other than a work in progress.</p>
+<p>The substance of this draft reflects the consensus of the TAG, but it is subject to ongoing
+editorial work and restructuring. Please bear this in mind when citing or linking
+to this document, as section numbers and headings may change.</p>
 <p>It will continue to evolve and the task force will issue updates as often as needed. At the
 conclusion of the task force, the TAG intends to adopt this document as a Finding.</p>
 <p>
