'define abuse, selectively link, include in def of harassment'

--- a/index.html
+++ b/index.html
@@ -1707,7 +1707,7 @@ device to their young child). Other times, the owner and primary user of a
 device might not be the only person with [=administrator=] access.
 
 These relationships can involve power imbalances. A child may have difficulty accessing any
-computing devices other than the ones their parent provides. A victim of abuse might not be able to
+computing devices other than the ones their parent provides. A victim of [=abuse=] might not be able to
 prevent their partner from having [=administrator=] access to their devices. An employee might have
 to agree to use their employer's devices in order to keep their job.
 
@@ -1735,22 +1735,23 @@ helps different users to react appropriately.
   <p>
     <span class="practicelab" id="abuse-reporting">
       Systems that allow for communicating on the web must provide an
-      effective capability to report abuse.
-        </span>
+      effective capability to report [=abuse=].
+    </span>
   </p>
 </div>
 <div class="practice" data-audiences="websites user-agents api-designers">
   <p>
     <span class="practicelab" id="abuse-protection">
       [=User agents=] and [=sites=] must
-      take steps to protect their users from abusive behaviour, and abuse
+      take steps to protect their users from abusive behaviour, and [=abuse=]
       mitigation must be considered when designing web platform features.
     </span>
   </p>
 </div>
 
-Online <dfn>harassment</dfn> is the "pervasive or severe targeting of an individual or group online
-through harmful behavior" [[PEN-Harassment]]. Harassment is a prevalent problem on the web,
+Digital <dfn>abuse</dfn> is the cruel treatment of a person through digital means. Online <dfn>harassment</dfn> 
+is the "pervasive or severe targeting of an individual or group online through harmful behavior" [[PEN-Harassment]]
+and constitutes a form of [=abuse=]. Harassment is a prevalent problem on the web,
 particularly via social media. While harassment may affect any person using the web, it may be more
 severe and its consequences more impactful for LGBTQ people, women, people in racial or ethnic
 minorities, people with disabilities, [=vulnerable people=] and other marginalized groups.
@@ -1766,12 +1767,12 @@ Disclosure of location information can be used to intrude on a
 person's physical safety or space.
 
 Reporting mechanisms are mitigations, but may not prevent harassment, particularly in cases where
-hosts, moderators, or other intermediaries are supportive of or complicit in the abuse.
+hosts, moderators, or other intermediaries are supportive of or complicit in the [=abuse=].
 
 Effective reporting is likely to require:
 
-* standardized mechanisms to identify abuse reporting contacts;
-* sites and user agents to provide visible and usable ways to report abuse;
+* standardized mechanisms to identify [=abuse=] reporting contacts;
+* sites and user agents to provide visible and usable ways to report [=abuse=];
 * identifiers to refer to senders and content;
 * the ability to provide context and explanation of harms;
 * people responsible for promptly responding to reports;
