'add conformance section'

--- a/index.html
+++ b/index.html
@@ -2391,6 +2391,20 @@ specifications to defend against, described in the sections that follow.
 
 <section class="appendix">
 
+# Conformance
+
+This document does not adhere to strict [[?RFC2129]] terminology because it is primarily of
+an informative nature and does not easily lend itself to constraining a conformance class.
+However, within the formulation of its principles, we have taken care to use "should" to indicate 
+that a principle can be ignored in some rare cases given that there are valid reasons for doing so and 
+"must" to indicate that we can see no situation in which deviating from the principle could 
+be justified.
+
+</section>
+
+
+<section class="appendix">
+
 # Acknowledgements {#acknowledgements}
 
 Some of the definitions in this document build on top of the work in
