'some should/must changes'

--- a/index.html
+++ b/index.html
@@ -1183,7 +1183,7 @@ according to their [=users=]' wishes.
 should restrict the [=data=] they transfer to what's either necessary to achieve their users'
 goals or aligns with their users' wishes and interests.</span></div>
 
-<div class="practice" data-audiences="api-designers"><span class="practicelab">Web APIs should be designed to minimize the amount of data that sites need
+<div class="practice" data-audiences="api-designers"><span class="practicelab">Web APIs must be designed to minimize the amount of data that sites need
 to request to carry out their users' goals.
 Web APIs should also provide granularity and user controls over <a>personal
 data</a> that is communicated to sites.</span></div>
@@ -1353,7 +1353,7 @@ despite the additional risk of [=browser fingerprinting=].
 ## Information access {#information}
 
 <div class="practice" data-audiences="api-designers user-agents">
-  <span class="practicelab">New web APIs must guard users' information at least
+  <span class="practicelab">New web APIs should guard users' information at least
   as well as existing APIs that are expected to stay in the web platform.</span>
 </div>
 
@@ -1883,7 +1883,7 @@ to [=people=] in accessible forms.
 <div class="practice" data-audiences="websites api-designers">
   <span class="practicelab" id="transparency-distinguishable">
     Mechanisms that can be used for [=recognize|recognizing=] [=people=] should be designed so that
-    their operation is visible and distinguishable, to [=user agents=], researchers and regulators.
+    their operation is visible and distinguishable, to [=user agents=], researchers, and regulators.
   </span>
 </div>
 
@@ -1919,7 +1919,7 @@ Simply providing a link to a complex policy is unlikely to mean that the person 
 <p>
   <span class="practicelab" id="principle-minimize-consent-requests">
     An [=actor=] should avoid interrupting a [=person=]'s use of a site for
-	consent requests when an alternative is available.
+	  consent requests when an alternative is available.
   </span>
 </p>
 </div>
@@ -1941,8 +1941,8 @@ Examples of alternatives to interrupting users with consent requests include:
 <div class="practice" data-audiences="websites">
 <p>
   <span class="practicelab" id="principle-consent-withdraw">
-  It should be as easy for a [=person=] to check what consent they have given, to withdraw consent,
-  or to opt out or object, as to give consent.
+    It should be as easy for a [=person=] to check what consent they have given, to withdraw consent,
+    or to opt out or object, as to give consent.
   </span>
 </p>
 </div>
