--- a/index.html
+++ b/index.html
@@ -1749,7 +1749,7 @@ helps different users to react appropriately.
   </p>
 </div>
 
-Digital <dfn>abuse</dfn> is the cruel treatment of a person through digital means. Online <dfn>harassment</dfn> 
+Digital <dfn>abuse</dfn> is the mistreatment of a person through digital means. Online <dfn>harassment</dfn> 
 is the "pervasive or severe targeting of an individual or group online through harmful behavior" [[PEN-Harassment]]
 and constitutes a form of [=abuse=]. Harassment is a prevalent problem on the web,
 particularly via social media. While harassment may affect any person using the web, it may be more
