--- a/index.html
+++ b/index.html
@@ -1183,7 +1183,7 @@ according to their [=users=]' wishes.
 should restrict the [=data=] they transfer to what's either necessary to achieve their users'
 goals or aligns with their users' wishes and interests.</span></div>
 
-<div class="practice" data-audiences="api-designers"><span class="practicelab">Web APIs must be designed to minimize the amount of data that sites need
+<div class="practice" data-audiences="api-designers"><span class="practicelab">Web APIs should be designed to minimize the amount of data that sites need
 to request to carry out their users' goals.
 Web APIs should also provide granularity and user controls over <a>personal
 data</a> that is communicated to sites.</span></div>
@@ -2393,10 +2393,10 @@ specifications to defend against, described in the sections that follow.
 
 # Conformance
 
-This document does not adhere to strict [[?RFC2129]] terminology because it is primarily of
+This document does not adhere to strict [[?RFC2119]] terminology because it is primarily of
 an informative nature and does not easily lend itself to constraining a conformance class.
 However, within the formulation of its principles, we have taken care to use "should" to indicate 
-that a principle can be ignored in some rare cases given that there are valid reasons for doing so and 
+that a principle can be overridden in some rare cases given that there are valid reasons for doing so and 
 "must" to indicate that we can see no situation in which deviating from the principle could 
 be justified.
 
