--- a/index.html
+++ b/index.html
@@ -1353,7 +1353,7 @@ despite the additional risk of [=browser fingerprinting=].
 ## Information access {#information}
 
 <div class="practice" data-audiences="api-designers user-agents">
-  <span class="practicelab">New web APIs must guard users' information at least
+  <span class="practicelab">New web APIs should guard users' information at least
   as well as existing APIs that are expected to stay in the web platform.</span>
 </div>
 
@@ -1884,7 +1884,7 @@ to [=people=] in accessible forms.
 <div class="practice" data-audiences="websites api-designers">
   <span class="practicelab" id="transparency-distinguishable">
     Mechanisms that can be used for [=recognize|recognizing=] [=people=] should be designed so that
-    their operation is visible and distinguishable, to [=user agents=], researchers and regulators.
+    their operation is visible and distinguishable, to [=user agents=], researchers, and regulators.
   </span>
 </div>
 
@@ -1920,7 +1920,7 @@ Simply providing a link to a complex policy is unlikely to mean that the person 
 <p>
   <span class="practicelab" id="principle-minimize-consent-requests">
     An [=actor=] should avoid interrupting a [=person=]'s use of a site for
-	consent requests when an alternative is available.
+	  consent requests when an alternative is available.
   </span>
 </p>
 </div>
@@ -1942,8 +1942,8 @@ Examples of alternatives to interrupting users with consent requests include:
 <div class="practice" data-audiences="websites">
 <p>
   <span class="practicelab" id="principle-consent-withdraw">
-  It should be as easy for a [=person=] to check what consent they have given, to withdraw consent,
-  or to opt out or object, as to give consent.
+    It should be as easy for a [=person=] to check what consent they have given, to withdraw consent,
+    or to opt out or object, as to give consent.
   </span>
 </p>
 </div>
@@ -2389,6 +2389,20 @@ specifications to defend against, described in the sections that follow.
 </section>
 
 <section class="appendix" id="bp-summary"></section>
+
+<section class="appendix">
+
+# Conformance
+
+This document does not adhere to strict [[?RFC2119]] terminology because it is primarily of
+an informative nature and does not easily lend itself to constraining a conformance class.
+However, within the formulation of its principles, we have taken care to use "should" to indicate 
+that a principle can be overridden in some rare cases given that there are valid reasons for doing so and 
+"must" to indicate that we can see no situation in which deviating from the principle could 
+be justified.
+
+</section>
+
 
 <section class="appendix">
 
