--- a/index.html
+++ b/index.html
@@ -1213,15 +1213,11 @@ goals or aligns with their users' wishes and interests.</span></div>
 <div class="practice" data-audiences="api-designers"><span class="practicelab">Web APIs should be designed to minimize the amount of data that sites need
 to request to carry out their users' goals.
 Web APIs should also provide granularity and user controls over <a>personal
-data</a> that is communicated to sites.</span></div>
+data</a> that is communicated to [=sites=].</span></div>
 
 Data minimization limits the risks of data being disclosed or misused. It also
 helps [=user agents=] and other [=actors=] more meaningfully explain the decisions their users need
 to make. For more information, see [[[Data-Minimization]]].
-
-Web APIs should be designed to minimize the amount of data that sites need to
-request to pursue their users' goals and interests. They should also provide granular
-user controls over [=personal data=] that is communicated to [=sites=].
 
 The principle of data minimization applies to all [=personal data=], even if it
 is not known to be identifying, sensitive, or otherwise harmful. See:
