--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@ _obligation_ to help their [=ward=] do so when the [=ward=]'s abilities aren't
 sufficient, even if that conflicts with the [=guardian=]'s desires. In
 practice, many [=guardians=] do not make decisions in their [=ward=]'s best
 interest, and it's critical that web platform technologies do not exacerbate
-the risks inherant in this situation.
+the risks inherent in this situation.
 
 [=User agents=] should balance a benevolent [=guardian=]'s need to protect
 their [=ward=] from dangers, against a [=ward=]'s need to protect themself
@@ -1490,7 +1490,7 @@ For example:
 * Their location.
 * Language preferences.
 * Any [=identifiers=] associated with them.
-* Video or audio from the their camera or microphone.
+* Video or audio from their camera or microphone.
 * The content of certain files on their filesystem.
 * Financial data.
 * Contacts.
