--- a/index.html
+++ b/index.html
@@ -787,10 +787,10 @@ and choice</i>", which, in today's digital environment, is often an indication t
 ## Vulnerability {#vulnerability}
 
 Sometimes particular groups of people, such as children, or the elderly,
-are classed as “vulnerable.” However, any [=person=] could be vulnerable in
+are classed as [=vulnerable people=]. However, any [=person=] could be vulnerable in
 one or more contexts, sometimes without realizing it.
 A [=person=] may not realise when they disclose personal data that
-they are vulnerable or could become vulnerable, and a [=party=] may have
+they are vulnerable or could become vulnerable, and an [=actor=] may have
 no way of knowing that a person is vulnerable.
 
 Some individuals may be more vulnerable to privacy risks or harm as a result of
@@ -2119,8 +2119,8 @@ be treated with greater default privacy protections and may be considered unable
 People can be vulnerable for different reasons, and some people may
 be vulnerable in a specific [=context=]. For example, a child might
 be vulnerable in many contexts, but a person in a position of power imbalance
-with an employer or other [=party=] might be specifically vulnerable in a
-context where they must interact with that party.  See [[[#vulnerability]]].
+with an employer or other [=actor=] might be vulnerable in the contexts
+where that actor is also present.  See [[[#vulnerability]]].
 
 ## Contexts {#context}
 
@@ -2270,7 +2270,7 @@ cross-context recognition.
 Systems which [=recognize=] people across [=contexts=] need
 to be careful not to apply the principles of one [=context=] in ways that
 violate the principles around use of information acquired in a different
-[=context=]. This is particularly true for [=vulnerable=] people, as
+[=context=]. This is particularly true for [=vulnerable people=], as
 recognising them in different [=contexts=] may force traits into the open
 that reveal their vulnerability. For example, if you meet your therapist at a
 party, you expect them to have different discussion topics with you than they
