--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@ and choice</i>", which, in today's digital environment, is often an indication t
 ## Vulnerability {#vulnerability}
 
 Sometimes particular groups of people, such as children, or the elderly,
-are classed as [=vulnerable people=]. However, any [=person=] could be vulnerable in
+are classified as [=vulnerable people=]. However, any [=person=] could be vulnerable in
 one or more contexts, sometimes without realizing it.
 A [=person=] may not realise when they disclose personal data that
 they are vulnerable or could become vulnerable, and an [=actor=] may have
