UAs should give information, not just try to.
#yoda

--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@ monitoring of their behaviour. Its <dfn class="export">user agent duties</dfn> i
   </dd>
   <dt><dfn class="export">Duty of Honesty</dfn></dt>
   <dd>
-    Honesty requires that the [=user agent=] try to give its [=user=]
+    Honesty requires that the [=user agent=] give its [=user=]
     information of which the [=user agent=] can reasonably be aware, that is relevant to
     them and that will increase their
     autonomy, as long as they can understand it and there's an appropriate
