clarify the intent of the document (Finding vs Statement track), declare it is now ready for wide review

--- a/index.html
+++ b/index.html
@@ -535,8 +535,7 @@ The substance of this draft reflects the consensus of the TAG, but it is subject
 editorial work and restructuring. Please bear this in mind when citing or linking
 to this document, as section numbers and headings may change.
 
-It will continue to evolve and the task force will issue updates as often as needed. At the
-conclusion of the task force, the TAG intends to adopt this document as a Finding.
+This document is considered stable by the TAG and is ready for wide review.
 
 </section>
 
