--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@ an imbalance of power: some [=people=] are more [=vulnerable=] and therefore in 
 need of protection.
 
 <dfn data-lt="governance">Data governance</dfn> is the system of principles that regulate [=information flows=].
-[=Data governance=] determines how
+[=Data governance=] determines
 which [=actors=] can collect what [=data=] and how they may, must, or must not [=process=] it
 ([[?GKC-Privacy]], [[?IAD]]). This document provides building blocks for [=data governance=]
 that puts [=people=] first.
