--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@ need of protection.
 
 <dfn data-lt="governance">Data governance</dfn> is the system of principles that regulate [=information flows=].
 [=Data governance=] determines how
- [=actors=] can collect what [=data=] and how they may, must, or must not [=process=] it
+which [=actors=] can collect what [=data=] and how they may, must, or must not [=process=] it
 ([[?GKC-Privacy]], [[?IAD]]). This document provides building blocks for [=data governance=]
 that puts [=people=] first.
 
