--- a/index.html
+++ b/index.html
@@ -1046,7 +1046,7 @@ off between principles.
 
 Once one is choosing between different designs at the Pareto frontier, the choice of which
 privacy principles to prefer is complex and depends heavily on the details of each
-particular situation. Note that peoples' privacy can also be in tension
+particular situation. Note that people's privacy can also be in tension
 with non-privacy concerns. As discussed in the [[[Ethical-Web]]], "it is important to
 consider the context in which a particular technology is being applied, the expected
 audience(s) for the technology, who the technology benefits and who it may disadvantage,
@@ -1063,7 +1063,7 @@ for other purposes, like to grow the service.</span></p>
 This is a special case of the <a href="#no-secondary-use">more general principle that data should not be used for more
 purposes than those specified when the data was collected</a>.
 
-Services sometimes use peoples' data in order to protect those or other people.
+Services sometimes use people's data in order to protect those or other people.
 A service that does this should explain what data it's
 using for this purpose. It should also say how it might use or share a person's
 data if it believes that person has violated the service's rules.
