minor grammar cleanup (#407)
* minor grammar cleanup

* Spell it out

---------

Co-authored-by: Jeffrey Yasskin <jyasskin@gmail.com>

--- a/index.html
+++ b/index.html
@@ -632,8 +632,8 @@ an imbalance of power: some [=people=] are more [=vulnerable=] and therefore in 
 need of protection.
 
 <dfn data-lt="governance">Data governance</dfn> is the system of principles that regulate [=information flows=].
-[=Data governance=] determines how
-which [=actors=] can collect what [=data=] and how they may, must, or must not [=process=] it
+[=Data governance=] determines
+which [=actors=] can collect [=data=], what data they can collect, how they can collect it, and how they can [=process=] it
 ([[?GKC-Privacy]], [[?IAD]]). This document provides building blocks for [=data governance=]
 that puts [=people=] first.
 
