Fix missing oxford commas. (#408)
Co-authored-by: Robin Berjon <robin@berjon.com>
Co-authored-by: Jeffrey Yasskin <jyasskin@gmail.com>

--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@ On the web, [=information flows=] may involve a wide variety of [=actors=] that 
 recognizable or obvious to a user within a particular interaction. Visiting a website may involve
 the actors that contribute to operating that site, but also actors with network access,
 which may include: Internet service providers; other network operators; local institutions providing
-a network connection including schools, libraries or universities; government intelligence services;
+a network connection including schools, libraries, or universities; government intelligence services;
 malicious hackers who have gained access to the network or the systems of any of the other actors.
 High-level threats including [=surveillance=] may be pursued by these actors. Pervasive monitoring,
 a form of large-scale, indiscriminate surveillance, is a known attack on the privacy of users of the
@@ -793,9 +793,9 @@ they are vulnerable or could become vulnerable, and an [=actor=] may have
 no way of knowing that a person is vulnerable.
 
 Some individuals may be more vulnerable to privacy risks or harm as a result of
-collection, misuse, loss or theft of personal data because:
+collection, misuse, loss, or theft of personal data because:
 
-* of their attributes, interests, opinions or behaviour;
+* of their attributes, interests, opinions, or behaviour;
 * of the situation or setting (e.g. where there is information asymmetry or other
 power imbalances);
 * they lack the capacity to fully assess the risks;
@@ -807,12 +807,12 @@ product or service.
 
 Additional privacy protections may be needed for personal data of vulnerable
 people or [sensitive information](#hl-sensitive-information) which could cause
-someone to become vulnerable if their personal data is collected, used or
-shared (e.g. blocking tracking elements, sensor data or information about
+someone to become vulnerable if their personal data is collected, used, or
+shared (e.g. blocking tracking elements, sensor data, or information about
 installed software or connected devices).
 
 While sometimes others can help vulnerable people assess privacy risks and
-make decisions about privacy (such as parents, [=guardians=] and peers), everyone
+make decisions about privacy (such as parents, [=guardians=], and peers), everyone
 has their own right to privacy.
 
 ### Guardians {#guardians}
@@ -929,7 +929,7 @@ may publish a picture of an event in which they are featured alongside others wh
 captured in the same picture would prefer their participation not to be disclosed. Another example
 of such issues are sites that enable people to upload their contacts: the person performing the
 upload might be more open to disclosing their social networks than the people they are connected to
-are. Such issues do not necessarily admit simple, straightforward solutions but they need to be
+are. Such issues do not necessarily admit simple, straightforward solutions, but they need to be
 carefully considered by people building websites.
 
 ### Transparency and Research {#transparency-for-research}
